project(
  'purple-deltachat', 'c',
  license: 'GPLv3'
)

libpurple = dependency('libpurple')
glib = dependency('glib')

subdir('src')

# nullclient = executable('nullclient', 'src/nullclient.c', 'src/defines.h',
#                         c_args : ['-DSTANDALONE'],
#                         dependencies : [libpurple_dep, glib])
